cmake_minimum_required(VERSION 3.8)

project("PracticeCPlusPlus")

add_subdirectory("000HelloWorld")
add_subdirectory("001Variables")
add_subdirectory("002Division")
add_subdirectory("003Input")
add_subdirectory("004Booleans")
add_subdirectory("005ComparisonOperators")
add_subdirectory("006Conditionals")
add_subdirectory("007WhileLoops")
add_subdirectory("008DoWhileLoops")
add_subdirectory("009StaticLocalVariables")
add_subdirectory("010CMathLibrary")
add_subdirectory("011RandomNumbers")
add_subdirectory("012Arrays")