cmake_minimum_required(VERSION 3.8)

project("PracticeCPlusPlus")

# Valid values are 98, 11, 14, 17, 20, and 23.
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
message("#### USING C++ STANDARD: C++${CMAKE_CXX_STANDARD}. ####")

if(MSVC AND NOT(CMAKE_CXX_STANDARD EQUAL 98) AND NOT(CMAKE_CXX_STANDARD EQUAL 11))
    add_compile_options("/std:c++${CMAKE_CXX_STANDARD}" "/Zc:__cplusplus")
    message("#### USING MSVC WITH C++ NEWER THAN C++11. ####")
endif()

add_subdirectory("000HelloWorld")
add_subdirectory("001Variables")
add_subdirectory("002Division")
add_subdirectory("003Input")
add_subdirectory("004Booleans")
add_subdirectory("005ComparisonOperators")
add_subdirectory("006Conditionals")
add_subdirectory("007WhileLoops")
add_subdirectory("008DoWhileLoops")
add_subdirectory("009StaticLocalVariables")
add_subdirectory("010CMathLibrary")
add_subdirectory("011RandomNumbers")
add_subdirectory("012Arrays")
add_subdirectory("013Vectors")
add_subdirectory("014Strings")
add_subdirectory("015StringStreams")
add_subdirectory("016AssociativeContainers")
add_subdirectory("017DefiningFunctions")
add_subdirectory("018Maps")
add_subdirectory("019References")